build + deploy + variable envirronement + style primary

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 /* Global Styles */
 :root {
-  --primary-color: #dc3545;
+  --primary-color: #0060b0;
   --dark-color: #333333;
   --dark-light-color: #5a5959;
   --light-color: #f4f4f4;
